Added the local testing script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test-android": "node playwright-android-real-device.js",
     "test-extension": "node playwright-extensions-test.js",
     "test-iPhone-emulation": "node playwright-single-on-iphone.js",
-    "test-lighthouse-report": "node playwright-lighthouse-report.js"
+    "test-lighthouse-report": "node playwright-lighthouse-report.js",
+    "test-sample": "node playwright-sample.js"
   },
   "engines": {
     "node": ">=12.7.0"
